k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notes-backend
  labels:
    app: notes-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notes-backend
  template:
    metadata:
      labels:
        app: notes-backend
    spec:
      containers:
      - name: notes-backend
        image: harshtripathi02/notes-server
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: notes-backend
spec:
  selector:
    app: notes-backend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
