k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notes-frontend
  labels:
    app: notes-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notes-frontend
  template:
    metadata:
      labels:
        app: notes-frontend
    spec:
      containers:
      - name: notes-frontend
        image: harshtripathi02/notes-frontend
        ports:
        - containerPort: 5173
---
apiVersion: v1
kind: Service
metadata:
  name: notes-frontend
spec:
  selector:
    app: notes-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5173
  type: ClusterIP
